@@ -17,9 +17,8 @@ import org.elasticsearch.compute.data.BooleanBlock;
 import org.elasticsearch.compute.data.ElementType;
 import org.elasticsearch.compute.data.Page;
 import org.elasticsearch.compute.data.ToMask;
+import org.elasticsearch.compute.expression.ExpressionEvaluator;
 import org.elasticsearch.compute.operator.DriverContext;
-import org.elasticsearch.compute.operator.EvalOperator;
-import org.elasticsearch.compute.operator.EvalOperator.ExpressionEvaluator;
 import org.elasticsearch.compute.operator.Warnings;
 import org.elasticsearch.core.Releasable;
 import org.elasticsearch.core.Releasables;
@@ -32,6 +31,7 @@ import org.elasticsearch.xpack.esql.core.tree.NodeInfo;
 import org.elasticsearch.xpack.esql.core.tree.Source;
 import org.elasticsearch.xpack.esql.core.type.DataType;
 import org.elasticsearch.xpack.esql.expression.function.Example;
+import org.elasticsearch.xpack.esql.expression.function.FunctionDefinition;
 import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.Param;
 import org.elasticsearch.xpack.esql.expression.function.scalar.EsqlScalarFunction;
@@ -50,6 +50,10 @@ import static org.elasticsearch.xpack.esql.core.type.DataType.NULL;
 
 public final class Case extends EsqlScalarFunction {
     public static final NamedWriteableRegistry.Entry ENTRY = new NamedWriteableRegistry.Entry(Expression.class, "Case", Case::new);
+    public static final FunctionDefinition DEFINITION = FunctionDefinition.def(Case.class)
+        .unaryVariadic(Case::new)
+        .capabilities("flattened")
+        .name("case");
 
     record Condition(Expression condition, Expression value) {
         ConditionEvaluatorSupplier toEvaluator(ToEvaluator toEvaluator) {
@@ -69,8 +73,10 @@ public final class Case extends EsqlScalarFunction {
             "cartesian_shape",
             "date",
             "date_nanos",
+            "date_range",
             "dense_vector",
             "double",
+            "flattened",
             "geo_point",
             "geo_shape",
             "geohash",
@@ -85,9 +91,11 @@ public final class Case extends EsqlScalarFunction {
             "unsigned_long",
             "version",
             "exponential_histogram" },
+        briefSummary = "Returns the value for the first condition that evaluates to true.",
         description = """
             Accepts pairs of conditions and values. The function returns the value that
-            belongs to the first condition that evaluates to `true`.
+            belongs to the first condition that evaluates to `true`. Both the conditions
+            and the returned values can be any expression, including column references.
 
             If the number of arguments is odd, the last argument is the default value which
             is returned when no condition matches. If the number of arguments is even, and
@@ -103,6 +111,11 @@ public final class Case extends EsqlScalarFunction {
                 description = "Calculate an hourly error rate as a percentage of the total number of log messages:",
                 file = "conditional",
                 tag = "docsCaseHourlyErrorRate"
+            ),
+            @Example(
+                description = "Extract error messages and count distinct ones using a column expression:",
+                file = "conditional",
+                tag = "docsCaseColumnExpression"
             ) }
     )
     public Case(
@@ -117,8 +130,10 @@ public final class Case extends EsqlScalarFunction {
                 "cartesian_shape",
                 "date",
                 "date_nanos",
+                "date_range",
                 "dense_vector",
                 "double",
+                "flattened",
                 "geo_point",
                 "geo_shape",
                 "geohash",
@@ -134,8 +149,8 @@ public final class Case extends EsqlScalarFunction {
                 "unsigned_long",
                 "version",
                 "exponential_histogram" },
-            description = "The value that’s returned when the corresponding condition is the first to evaluate to `true`. "
-                + "The default value is returned when no condition matches."
+            description = "The expression or value that’s returned when the corresponding condition is the first to evaluate to `true`. "
+                + "Can be a column reference or any other expression. The default value is returned when no condition matches."
         ) List<Expression> rest
     ) {
         super(source, Stream.concat(Stream.of(first), rest.stream()).toList());
@@ -216,15 +231,15 @@ public final class Case extends EsqlScalarFunction {
             dataType = value.dataType().noText();
             return TypeResolutions.isType(
                 value,
-                t -> t != DataType.DATE_RANGE,
+                t -> true,
                 sourceText(),
                 TypeResolutions.ParamOrdinal.fromIndex(position),
-                originalWasNull ? NULL.typeName() : "any but date_range"
+                originalWasNull ? NULL.typeName() : "any type"
             );
         }
         return TypeResolutions.isType(
             value,
-            t -> t.noText() == dataType && t != DataType.DATE_RANGE,
+            t -> t.noText() == dataType,
             sourceText(),
             TypeResolutions.ParamOrdinal.fromIndex(position),
             dataType.typeName()
@@ -252,21 +267,23 @@ public final class Case extends EsqlScalarFunction {
             if (condition.condition.foldable() == false) {
                 return false;
             }
-            if (Boolean.TRUE.equals(condition.condition.fold(FoldContext.small() /* TODO remove me - use literal true?*/))) {
-                /*
-                 * `fold` can make four things here:
-                 * 1. `TRUE`
-                 * 2. `FALSE`
-                 * 3. null
-                 * 4. A list with more than one `TRUE` or `FALSE` in it.
-                 *
-                 * In the first case, we're foldable if the condition is foldable.
-                 * The multivalued field will make a warning, but eventually
-                 * become null. And null will become false. So cases 2-4 are
-                 * the same. In those cases we are foldable only if the *rest*
-                 * of the condition is foldable.
-                 */
-                return condition.value.foldable();
+            /* Given the current condition is foldable,
+                if we have already folded the condition into a Literal
+                    If True, Case is foldable if the value is foldable
+                    If False, Case is foldable if the rest of the conditions are foldable
+                Otherwise
+                    if the value is foldable and the rest of the conditions are foldable, Case is foldable
+             */
+            if (condition.condition instanceof Literal literal) {
+                if (Boolean.TRUE.equals(literal.value())) {
+                    // The condition is literally TRUE, so only the matching value needs to be foldable.
+                    return condition.value.foldable();
+                } else {
+                    continue;
+                }
+            }
+            if (condition.value.foldable() == false) {
+                return false;
             }
         }
         return elseValue.foldable();
@@ -344,9 +361,36 @@ public final class Case extends EsqlScalarFunction {
     }
 
     private Expression finishPartialFold(List<Expression> newChildren) {
+        Expression result = innerFinishPartialFold(newChildren);
+        if (result.dataType().noText().equals(dataType()) == false) {
+            throw new IllegalStateException("partiallyFold produced type [" + result.dataType() + "] but expected [" + dataType() + "]");
+        }
+        return result;
+    }
+
+    private Expression innerFinishPartialFold(List<Expression> newChildren) {
         return switch (newChildren.size()) {
+            // CASE(false, a) -> NULL
             case 0 -> new Literal(source(), null, dataType());
-            case 1 -> newChildren.get(0);
+            /*
+             * CASE(false, a, b) -> b
+             *
+             * We *must* return something of dataType or downstream stuff will
+             * blow up. `b` can be:
+             *   - dataType - return as-is
+             *   - TEXT when dataType is keyword - return as-is - which is safe because
+             *     TEXT is the same as KEYWORD everywhere that matters downstream from here
+             *   - any NULL-typed expression — cast it to dataType so callers
+             *     see the right type (e.g. KEYWORD, not NULL)
+             */
+            case 1 -> {
+                Expression child = newChildren.getFirst();
+                if (child.dataType() == NULL && dataType() != NULL) {
+                    yield new Literal(child.source(), null, dataType());
+                }
+                yield child;
+            }
+            // CASE(false, a, b, c, d) -> CASE(b, c, d)
             default -> replaceChildren(newChildren);
         };
     }
@@ -394,11 +438,7 @@ public final class Case extends EsqlScalarFunction {
         }
     }
 
-    record ConditionEvaluator(
-        Warnings conditionWarnings,
-        EvalOperator.ExpressionEvaluator condition,
-        EvalOperator.ExpressionEvaluator value
-    ) implements Releasable {
+    record ConditionEvaluator(Warnings conditionWarnings, ExpressionEvaluator condition, ExpressionEvaluator value) implements Releasable {
 
         private static final long BASE_RAM_BYTES_USED = RamUsageEstimator.shallowSizeOfInstance(CaseLazyEvaluator.class);
 
@@ -454,8 +494,8 @@ public final class Case extends EsqlScalarFunction {
         BlockFactory blockFactory,
         ElementType resultType,
         List<ConditionEvaluator> conditions,
-        EvalOperator.ExpressionEvaluator elseVal
-    ) implements EvalOperator.ExpressionEvaluator {
+        ExpressionEvaluator elseVal
+    ) implements ExpressionEvaluator {
 
         private static final long BASE_RAM_BYTES_USED = RamUsageEstimator.shallowSizeOfInstance(CaseLazyEvaluator.class);
 
@@ -559,8 +599,8 @@ public final class Case extends EsqlScalarFunction {
         ElementType resultType,
         BlockFactory blockFactory,
         ConditionEvaluator condition,
-        EvalOperator.ExpressionEvaluator elseVal
-    ) implements EvalOperator.ExpressionEvaluator {
+        ExpressionEvaluator elseVal
+    ) implements ExpressionEvaluator {
 
         private static final long BASE_RAM_BYTES_USED = RamUsageEstimator.shallowSizeOfInstance(CaseLazyEvaluator.class);
 
